@@ -5,6 +5,11 @@
 	Added check for message() output from CheckClientVersion.__init__
 	(PokerClientUpgradeFailedTestCase.test01_CheckClientVersionFailedAndNeedUpgrade):
 	Added output checks.
+	(DryrunUpgradeMockUp): Created mockup.
+	(PokerClientDryrunUpgrade): Created test class.
+	(PokerClientDryrunUpgrade.setUp): Wrote method.
+	(PokerClientDryrunUpgrade.tearDown): Wrote method.
+	(PokerClientDryrunUpgrade.test01_dryRunLineTest): Wrote method.
 
 	* tests/testmessages.py: Added import of upgrade to put
 	upgrade.CheckClientVersion on the messages list.
